# mcFramework

./: .gitignore  .safety-project.ini  CHANGELOG.md  CONTRIBUTING.md  CUDA_README.md  GITHUB_ACTIONS_SETUP_COMPLETE.md  MPS_README.md  PROJECT_PLAN.md  README.md  SYSTEM_DESIGN.md  coverage.xml  demo.py  demoBlackScholes.py  pyproject.toml  trace
.github/: QUICK_REFERENCE.md  SETUP_GUIDE.md  WORKFLOWS_OVERVIEW.md  Workflow_README.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  docs-deploy.yml  docs-validate.yml  publish.yml  release-drafter.yml  safety_scan.yml  stale.yml
coverage/: .coverage  coverage.xml
coverage/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a1b4afb96db1cc11___init___py.html  z_a1b4afb96db1cc11_core_py.html  z_a1b4afb96db1cc11_sims_py.html  z_a1b4afb96db1cc11_stats_engine_py.html  z_a1b4afb96db1cc11_utils_py.html
demos/: TICKER_DEMO_README.md  demo.py  demoBlackScholes.py  demoNeutronTransport.py  demoTickerBlackScholes.py  demo_apple_silicon_benchmark.py  demo_cuda_benchmark.py
demos/gui/: __init__.py  quant_black_scholes.py
demos/gui/assets/: dark_theme.qss
demos/gui/controllers/: __init__.py  analysis_controller.py
demos/gui/models/: __init__.py  state.py
demos/gui/widgets/: __init__.py  charts.py  empty_state.py  log_console.py  market_data_tab.py  monte_carlo_tab.py  option_calculator.py  options_greeks_tab.py  sidebar.py  (+3 more)
docs/: PROJECT_PLAN.md  SYSTEM_DESIGN.md
docs/legacy/: PROJECT_PLAN.md  SYSTEM_DESIGN.md
docs/source/: PROJECT_PLAN.rst  SYSTEM_DESIGN.rst  conf.py  getting-started.md  index.rst
docs/tools/: coverage_to_md.py  coverage_to_rst.py
docs/uml/: README.md  mcframework.puml  mcframework_class_diagram.md
src/mcframework/: __init__.py  core.py  sims.py  simulation.py  stats_engine.py  utils.py
src/mcframework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: .coverage  conftest.py  test_basic_statistics.py  test_black_scholes.py  test_confidence_intervals.py  test_core.py  test_distribution_free_metrics.py  test_errors_and_edge_cases.py  test_integration.py  test_mocking_and_isolation.py  test_neutron_transport.py  test_parametrized.py  test_performance_and_concurrency.py  test_regression.py  test_sims.py  test_stats_engine.py  test_stats_engine_edge_cases.py  test_torch_backend.py  test_utils.py
(+80 files in other folders)
